correct vertical position of node
Related to #82. Because the transform-origin was not set,
the vertical position could overlap the node description text.

--- a/editor/css/describe.css
+++ b/editor/css/describe.css
@@ -53,6 +53,7 @@
 .xible>.describe .node {
 	left: 50%;
 	transform: translateX(-50%) scale(2);
+	transform-origin: center 0;
 }
 
 .xible>.describe .node>h1 {
